Added Stock Quantities
